[project]
name = "lucky"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.45,<2.1.0)",
    "aiosqlite (<0.22.0)",
    "tsidpy (>=1.1.5,<2.0.0)",
    "tenacity (>=9.1.2,<9.2.0)",
    "fastapi[standard] (>=0.124.4,<0.125.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<9.1.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
ignore = ["D100", "D101", "D102", "D103", "D105", "D106"]

[tool.isort]
multi_line_output = 3

[tool.poetry]
package-mode = false
