[project]
name = "lucky"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.45,<2.1.0)",
    "aiosqlite (<0.22.0)",
    "tenacity (>=9.1.2,<9.2.0)",
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "pydantic-settings (>=2.13.1,<2.14.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<9.1.0)"
]

[tool.pydocstyle]
ignore = ["D100", "D101", "D102", "D103", "D105", "D106"]

[tool.isort]
multi_line_output = 3
